--- a/test.html
+++ b/test.html
@@ -11,7 +11,7 @@
         <h1>say</h1>
     </div>
     <div class="contact-form">
-        <form id="contact-form" method="POST" action="contact-form-handler.php" >
+        <form id="contact-form" method="post" action="contact-form-handler.php" >
 <input name="name" class="form-control">
 <input type="submit" class="form-control-submit" value="send message">
         </form>
